2008-05-27  Arnim Laeuger  <arniml@users.sourceforge.net>

   * UrJTAG.txt: document progress option of svf command
   * src/cmd/svf.c (cmd_svf_run): new command option 'progress'
   * src/svf/svf.c (svf_run), include/svf.h (svf_run): new parameter
     print_progress
   * src/svf/svf_flex.l (fix_yylloc_nl): report line / total number

2008-05-26  Arnim Laeuger  <arniml@users.sourceforge.net>

   [adding svf progress output] (Steve Franks)
   * src/svf/svf_bison.y (svf_bison_init): hand down parameters for scanner
     initialization
   * src/svf/svf_flex.l: output progress indicator upon newline detection
   * src/svf/svf.c (svf_run): caluclate number of lines and pass result
     to scanner initialization
   * src/svf/svf.h: added "extra" data type for scanner

2008-05-26  Kolja Waschk <kawk>

   * src/bus/avr32.c, src/bus/buses.c, src/bus/buses.h,
     src/bus/Makefile.am, src/flash/amd.c, THANKS, configure.ac,
     doc/UrJTAG.txt, data/atmel/at32ap7000, data/atmel/at32ap7000/at32ap7000,
     data/atmel/at32ap7000/STEPPINGS, data/atmel/PARTS, data/Makefile.am:
     add support for Atmel's AT32AP7000 (by Gabor Juhos)

2008-05-24  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/tap/cable/usbblaster.c (usbblaster_connect): added missing
     malloc for cable_params

2008-05-23  Mike Frysinger  <vapier@gentoo.org>

   * data/analog/PARTS: Add BF526 id.

2008-05-21  Jie Zhang  <jie.zhang@analog.com>

   [ 1951767 ] bsdl2jtag cannot parse some bsdl files
   * src/bsdl2jtag.c (endline): Prevent `:' from being scanned in.

2008-05-21  Jie Zhang  <jie.zhang@analog.com>

   [ 1968455 ] Enter UPDATE state after register shift
   * include/chain.h (EXITMODE_UPDATE): Define.
   * src/tap/tap.c (tap_defer_shift_register): Enter Update-DR
     or Update-IR when requested.

2008-05-20  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/tap/cable/ft2232.c, src/tap/cable/usbblaster.c:
     typo in help string fixed